fixed overflow

--- a/2 task/src/scss/_global.scss
+++ b/2 task/src/scss/_global.scss
@@ -51,7 +51,10 @@ li {
   min-height: 100vh;
   margin: 0 auto;
   position: relative;
-  overflow: hidden;
+
+  @media (max-width: 1200px) {
+    overflow: hidden;
+  }
 }
 
 .container {
